fix(v-list-tile-action): fixed alignment of selection-controls
fixes #2684

--- a/src/stylus/components/_lists.styl
+++ b/src/stylus/components/_lists.styl
@@ -93,6 +93,7 @@ theme(list, "list")
 
       .input-group--selection-controls
         align-items: center
+        flex: 0 1
         padding: 0
 
       .input-group__details
